--- a/style.scss
+++ b/style.scss
@@ -202,7 +202,7 @@
     }
     h1{
         font-family:"JosefinSans-Regular" ;
-        font-size: 45px;
+        font-size: 45;
         font-weight: bolder;
     }
     .twentypx{
@@ -311,7 +311,7 @@ p{
         align-items: center;
         width: 123px;
         background-color: #742296;
-        // border-radius: 3px;
+      
         a{
             font-weight: 600;
             font-family:"JosefinSans-Regular" ;
