--- a/style.scss
+++ b/style.scss
@@ -630,6 +630,9 @@ p{
         }
 
         .icons{
+            a{
+                text-decoration: none;
+            }
             margin-top: 6px;
             .cone{
                 font-size: 24px;
@@ -1007,7 +1010,7 @@ margin-right: 20px;
     padding-right: 20px;
     overflow: hidden;
     .fa-tw-lo{
-      
+        width: 125px;
         p{
             font-size: 10px;
         }
