--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,7 @@ $base-fonttext:18px;
 .munehamb{
 
     .overlay {
-        height: 100%;
+        height: 120vh;
         width: 0;
         position: absolute;
         z-index: 1;
