--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
   src: url("JosefinSans-Regular.ttf");
 }
 .munehamb .overlay {
-  height: 100%;
+  height: 120vh;
   width: 0;
   position: absolute;
   z-index: 1;
