--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
   src: url("JosefinSans-Regular.ttf");
 }
 .munehamb .overlay {
-  height: 120vh;
+  height: 125vh;
   width: 0;
   position: absolute;
   z-index: 1;
@@ -218,7 +218,7 @@ body {
 #media .project {
   -o-object-fit: cover;
      object-fit: cover;
-  height: 260px;
+  height: 250px;
 }
 #media .twoimgs {
   margin-top: 20px;
@@ -227,8 +227,8 @@ body {
   -o-object-fit: cover;
      object-fit: cover;
   position: relative;
-  top: 58px;
-  height: 260px;
+  top: 68px;
+  height: 250px;
   right: 4px;
 }
 #media h3 {
@@ -307,7 +307,7 @@ body {
 #services .party .two {
   -o-object-fit: cover;
      object-fit: cover;
-  top: 64.5vh;
+  top: 65.5vh;
   position: relative;
   float: inline-end;
   height: 8%;
@@ -334,7 +334,7 @@ body {
   border: 1px solid white;
 }
 #services .digital img {
-  top: 69vh;
+  top: 70vh;
   position: relative;
   float: inline-end;
 }
@@ -373,7 +373,7 @@ body {
 #services .camera img {
   height: 8%;
   position: relative;
-  top: 68.8vh;
+  top: 69.8vh;
   float: inline-end;
   -o-object-fit: cover;
      object-fit: cover;
@@ -857,7 +857,7 @@ body {
     margin-left: 11px;
   }
   .pics-instagram .tighbutoon {
-    padding-top: 83px;
+    padding-top: 95px;
   }
   .pics-instagram .tighbutoon h3 {
     font-size: 15px;
@@ -1814,5 +1814,37 @@ body {
   }
   #footer .line {
     width: 82px;
+  }
+}
+@media only screen and (min-width: 1399px) {
+  #media .project {
+    height: 248px;
+  }
+  #media .twoimgs .tech {
+    position: relative;
+    top: 69px;
+    height: 249px;
+    right: 5px;
+  }
+  #services .camera p {
+    top: 61vh;
+  }
+  #services .camera img {
+    top: 61.4vh;
+  }
+  #services .party p {
+    top: 61vh;
+  }
+  #services .party .two {
+    top: 57.7vh;
+  }
+  #services .digital img {
+    top: 61.7vh;
+  }
+  .pics-instagram .head h2 {
+    font-size: 23px;
+  }
+  .pics-instagram .head .Instagram {
+    font-size: 23px;
   }
 }/*# sourceMappingURL=style.css.map */
